# Geolocation

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_all_ut.sh  setup.sh
app/: AppConfigurationData.hpp  Application.cpp  BasicLocationManager.cpp  BasicLocationManager.hpp  CMakeLists.txt  DatabaseConfig.hpp  GeolocationData.hpp  IDatabase.hpp  IIpFromUrlProvider.hpp  ILocationManager.hpp  ILocationProvider.hpp  IpAddress.hpp  IpFromUrlProvider.cpp  IpFromUrlProvider.hpp  MainWindow.cpp  MainWindow.hpp  NetworkAccessHandler.hpp  NetworkAccessManager.hpp  NetworkReply.cpp  NetworkReply.hpp  OnlineLocationProvider.cpp  OnlineLocationProvider.hpp  SQLiteDatabase.cpp  SQLiteDatabase.hpp  SqlDatabase.cpp  SqlDatabase.hpp  Url.hpp  build.sh  main.cpp
app/include/: GeolocationData.hpp  IpAddress.hpp  IpLocationData.hpp  SQLiteDatabase.hpp  Url.hpp
app/intf/: IDatabase.hpp  IIpFromUrlProvider.hpp  ILocationManager.hpp  ILocationProvider.hpp  INetworkAccessHandler.hpp  INetworkAccessManager.hpp
app/network/: NetworkAccessHandler.cpp
app/src/: Application.cpp  Application.hpp  BasicLocationManager.cpp  BasicLocationManager.hpp  MainWindow.cpp  MainWindow.hpp  SQLiteDatabase.cpp  main.cpp
tests/: CMakeLists.txt  test_input.txt
tests/mocks/: DatabaseMock.hpp  IpFromUrlProviderMock.hpp  LocationProviderMock.hpp  NetworkAccessHandlerMock.hpp  NetworkAccessManagerMock.hpp
tests/ut/: BasicLocationManagerTest.cpp  OnlineLocationProviderTest.cpp  SQLiteDatabaseTest.cpp
